--- a/sample.env
+++ b/sample.env
@@ -2,6 +2,6 @@ PORT=7000
 GITHUB_WEBHOOK_TOKEN=123456789
 YOUTUBE_SECRET=stuff
 
-ALGOLIA_APP_ID=NCCR9CY838
-ALGOLIA_ADMIN_KEY=3dce0429d287cc800377c3bb8390038d
-ALGOLIS_SEARCH_KEY=983ca93cd9114107a57f9eaaf7f1fb2a
+ALGOLIA_APP_ID=
+ALGOLIA_ADMIN_KEY=
+ALGOLIS_SEARCH_KEY=
